hopefully fixed horizontal scroll

--- a/app/assets/stylesheets/application/display.css.sass
+++ b/app/assets/stylesheets/application/display.css.sass
@@ -5,9 +5,10 @@ html
  height: 100%
 body
  position: relative
- overflow-x: hidden
  font-size: 18px
  line-height: 26px
+ overflow: hidden
+ overflow-y: auto
 
 h1,h2,h3,h4,h5,h6,p
  font-family: inherit
